--- a/realibovski/Base.lproj/Main.storyboard
+++ b/realibovski/Base.lproj/Main.storyboard
@@ -747,7 +747,7 @@
                                 <color key="backgroundColor" red="0.29411764709999999" green="0.76078431369999999" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="cbc-xE-uvt">
-                                <rect key="frame" x="20" y="333" width="374" height="240"/>
+                                <rect key="frame" x="20" y="288" width="374" height="330"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Пол" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rzj-qK-Hh6">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
@@ -769,6 +769,14 @@
                                         <rect key="frame" x="0.0" y="180" width="374" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="Tm6-k2-z78"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Сервер" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Isz-UQ-bWG">
+                                        <rect key="frame" x="0.0" y="270" width="374" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="EbG-gB-Y8p"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -827,6 +835,7 @@
                     <connections>
                         <outlet property="age" destination="FlY-S4-vj1" id="CLR-PF-bnz"/>
                         <outlet property="cogni" destination="DMh-cw-WKO" id="073-d0-nHp"/>
+                        <outlet property="serverURL" destination="Isz-UQ-bWG" id="CiJ-xp-rrN"/>
                         <outlet property="sex" destination="rzj-qK-Hh6" id="pat-aj-flQ"/>
                     </connections>
                 </viewController>
